--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Basic page</title>
-
 </head>
 
 <body>
@@ -49,13 +48,13 @@
                 <h4>nation 1</h4>
                 <ol>
                     <li>
-                        <p></p>
+                        <p>city 1M</p>
                     </li>
                     <li>
-                        <p></p>
+                        <p>city 400k</p>
                     </li>
                     <li>
-                        <p></p>
+                        <p>city 223k</p>
                     </li>
                 </ol>
             </ul>
@@ -63,13 +62,13 @@
                 <h4>nation 2</h4>
                 <ol>
                     <li>
-                        <p></p>
+                        <p>city 5M</p>
                     </li>
                     <li>
-                        <p></p>
+                        <p>city 2M</p>
                     </li>
                     <li>
-                        <p></p>
+                        <p>city 621k</p>
                     </li>
                 </ol>
             </ul>
@@ -77,17 +76,16 @@
                 <h4>nation 3</h4>
                 <ol>
                     <li>
-                        <p></p>
+                        <p>city 10M</p>
                     </li>
                     <li>
-                        <p></p>
+                        <p>city 7M</p>
                     </li>
                     <li>
-                        <p></p>
+                        <p>city 3M</p>
                     </li>
                 </ol>
             </ul>
-
         </aside>
     </main>
 
