--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </article>
         <aside>
             <h2>Aside Headline</h2>
-            <ul>
+            <ul><li>
                 <h4>nation 1</h4>
                 <ol>
                     <li>
@@ -57,9 +57,8 @@
                         <p>city 223k</p>
                     </li>
                 </ol>
-            </ul>
-            <ul>
-                <h4>nation 2</h4>
+            </li>
+                <li>          <h4>nation 2</h4>
                 <ol>
                     <li>
                         <p>city 5M</p>
@@ -71,9 +70,9 @@
                         <p>city 621k</p>
                     </li>
                 </ol>
-            </ul>
-            <ul>
-                <h4>nation 3</h4>
+                </li>
+                <li>
+                    <h4>nation 3</h4>
                 <ol>
                     <li>
                         <p>city 10M</p>
@@ -85,6 +84,7 @@
                         <p>city 3M</p>
                     </li>
                 </ol>
+                </li>
             </ul>
         </aside>
     </main>
