Percent changed to abs number in image resize

--- a/index.html
+++ b/index.html
@@ -1,97 +1,97 @@
-<!DOCTYPE html>
-<html>
+    <!DOCTYPE html>
+    <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Basic page</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Basic page</title>
+    </head>
 
-<body>
-    <header>
-        <h1>Logo</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-            </ul>
-        </nav>
-        <a href="login.html">Login</a>
-    </header>
-    <main>
-        <h1>Headline</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A quas officia rem explicabo, numquam modi deleniti
-            totam praesentium odit aliquam, commodi rerum aperiam repellat dolorem ullam tenetur quidem expedita
-            tempore?</p>
-        <article>
-            <h2>Article Headline 1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, magni praesentium? Adipisci illo
-                consequuntur quidem harum maxime quis eaque vel enim delectus voluptates corporis pariatur ipsa,
-                similique tempora fugiat provident.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A atque maiores repudiandae, quis deleniti
-                cumque earum at, esse natus eaque veritatis delectus iure dignissimos quia excepturi qui ipsam
-                exercitationem officia!</p>
-            <img src="10626138_1498742577041306_7862717637000379136_o.jpg" width="10%" alt="Floating Island">
-        </article>
-        <article>
-            <h2>Article Headline 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit eaque tempora officia animi! Cum
-                quod porro corporis officia dicta? Rerum voluptatum laudantium consectetur inventore nam corrupti, iste
-                ratione accusamus.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam animi odit quas, sequi dicta vel
-                necessitatibus beatae porro magni consectetur sint ea cum, inventore neque recusandae ullam soluta
-                molestias sapiente.</p>
-        </article>
-        <aside>
-            <h2>Aside Headline</h2>
-            <ul>
-                <li>
-                    <h4>nation 1</h4>
-                    <ol>
-                        <li>
-                            <p>city 1M</p>
-                        </li>
-                        <li>
-                            <p>city 400k</p>
-                        </li>
-                        <li>
-                            <p>city 223k</p>
-                        </li>
-                    </ol>
-                </li>
-                <li>
-                    <h4>nation 2</h4>
-                    <ol>
-                        <li>
-                            <p>city 5M</p>
-                        </li>
-                        <li>
-                            <p>city 2M</p>
-                        </li>
-                        <li>
-                            <p>city 621k</p>
-                        </li>
-                    </ol>
-                </li>
-                <li>
-                    <h4>nation 3</h4>
-                    <ol>
-                        <li>
-                            <p>city 10M</p>
-                        </li>
-                        <li>
-                            <p>city 7M</p>
-                        </li>
-                        <li>
-                            <p>city 3M</p>
-                        </li>
-                    </ol>
-                </li>
-            </ul>
-        </aside>
-    </main>
+    <body>
+        <header>
+            <h1>Logo</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                </ul>
+            </nav>
+            <a href="login.html">Login</a>
+        </header>
+        <main>
+            <h1>Headline</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A quas officia rem explicabo, numquam modi deleniti
+                totam praesentium odit aliquam, commodi rerum aperiam repellat dolorem ullam tenetur quidem expedita
+                tempore?</p>
+            <article>
+                <h2>Article Headline 1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, magni praesentium? Adipisci illo
+                    consequuntur quidem harum maxime quis eaque vel enim delectus voluptates corporis pariatur ipsa,
+                    similique tempora fugiat provident.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A atque maiores repudiandae, quis deleniti
+                    cumque earum at, esse natus eaque veritatis delectus iure dignissimos quia excepturi qui ipsam
+                    exercitationem officia!</p>
+                <img src="10626138_1498742577041306_7862717637000379136_o.jpg" width="100" alt="Floating Island">
+            </article>
+            <article>
+                <h2>Article Headline 2</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit eaque tempora officia animi! Cum
+                    quod porro corporis officia dicta? Rerum voluptatum laudantium consectetur inventore nam corrupti, iste
+                    ratione accusamus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam animi odit quas, sequi dicta vel
+                    necessitatibus beatae porro magni consectetur sint ea cum, inventore neque recusandae ullam soluta
+                    molestias sapiente.</p>
+            </article>
+            <aside>
+                <h2>Aside Headline</h2>
+                <ul>
+                    <li>
+                        <h4>nation 1</h4>
+                        <ol>
+                            <li>
+                                <p>city 1M</p>
+                            </li>
+                            <li>
+                                <p>city 400k</p>
+                            </li>
+                            <li>
+                                <p>city 223k</p>
+                            </li>
+                        </ol>
+                    </li>
+                    <li>
+                        <h4>nation 2</h4>
+                        <ol>
+                            <li>
+                                <p>city 5M</p>
+                            </li>
+                            <li>
+                                <p>city 2M</p>
+                            </li>
+                            <li>
+                                <p>city 621k</p>
+                            </li>
+                        </ol>
+                    </li>
+                    <li>
+                        <h4>nation 3</h4>
+                        <ol>
+                            <li>
+                                <p>city 10M</p>
+                            </li>
+                            <li>
+                                <p>city 7M</p>
+                            </li>
+                            <li>
+                                <p>city 3M</p>
+                            </li>
+                        </ol>
+                    </li>
+                </ul>
+            </aside>
+        </main>
 
-    <footer><span>@copy;Björn Larsson</span></footer>
-</body>
+        <footer><span>@copy;Björn Larsson</span></footer>
+    </body>
 
-</html>
+    </html>
