--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
-
 <body>
     <header>
         <h1>Logo</h1>
