--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Basic page</title>
+        link ref="stylesheet" href="/css/style.css"/>
     </head>
 
     <body>
@@ -90,8 +91,6 @@
                 </ul>
             </aside>
         </main>
-
         <footer><span>@copy;Björn Larsson</span></footer>
     </body>
-
     </html>
