--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Basic page</title>
-        link ref="stylesheet" href="/css/style.css"/>
+        <link rel="stylesheet" href="/css/style.css"/>
     </head>
 
     <body>
@@ -42,7 +42,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam animi odit quas, sequi dicta vel
                     necessitatibus beatae porro magni consectetur sint ea cum, inventore neque recusandae ullam soluta
                     molestias sapiente.</p>
-            </article>
+                </article>
+            </main>
             <aside>
                 <h2>Aside Headline</h2>
                 <ul>
@@ -90,7 +91,6 @@
                     </li>
                 </ul>
             </aside>
-        </main>
-        <footer><span>@copy;Björn Larsson</span></footer>
+        <footer><span>&copy;Björn Larsson</span></footer>
     </body>
     </html>
